# GeoMark

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
.github/workflows/: ci.yml
cmake/: aarch64-linux-gnu-base.cmake  aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake
config/: base.yaml  rover.yaml
data/: point_codes.txt
deploy/base/systemd/: geomark-base.service
deploy/handheld/systemd/: geomark-connect.service  geomark-disable-cursor.service  geomark-ui.service  geomark-update.service
deploy/rover/systemd/: geomark-rover.service
docs/: architecture.md  field-guide.md  project-summary.md  ssh-setup.md  wifi-ap-setup.md  wiring.md
include/: geomark.h
scripts/: deploy.ps1  start_base.sh  start_rover.sh
src/: main.c
src/base/: base.c  station.c  station.h
src/collector/: breaklines.c  breaklines.h  collector.c  collector.h  coords.c  coords.h  export.c  export.h  job_metadata.c  job_metadata.h  measure_points.c  measure_points.h  measure_points_export.c  measure_points_export.h  points.c  points.h  usb_export.c  usb_export.h
src/geomark/: __init__.py  config.py  main.py
src/geomark/base/: __init__.py  radio.py  station.py
src/geomark/collector/: __init__.py  export.py  point.py  session.py
src/geomark/gnss/: __init__.py  nmea.py  rtcm.py  um980.py
src/geomark/rover/: __init__.py  radio.py  station.py
src/geomark/ui/: __init__.py
src/geomark/ui/cli/: __init__.py  display.py
src/geomark/ui/web/: __init__.py  app.py
src/gnss/: nmea.c  nmea.h  rtcm3.c  rtcm3.h  um980.c  um980.h
src/net/: rover_packet.h  rtk_feed_client.c  rtk_feed_client.h  stream_client.c  stream_client.h  stream_server.c  stream_server.h
src/rover/: rover.c  station.c  station.h
src/staticlog/: station.c  station.h
src/stream/: file.c  file.h  radio.c  radio.h  serial.c  serial.h
src/survey/: codelist.c  codelist.h  export.c  export.h  survey.c  survey.h
src/ui/: client.c  client.h  gpio_button.c  gpio_button.h  input.h  preview.c  preview.h  survey_screen.c  survey_screen.h
src/ui/core/: keyboard.c  keyboard.h  screen_stack.c  screen_stack.h  touch_input.c  touch_input.h  ui_event.h  widget.c  widget.h  widget_draw.c
src/ui/screens/: continue_project_screen.c  continue_project_screen.h  continue_project_screen_draw.c  export_screen.c  export_screen.h  export_screen_draw.c  job_context.c  job_context.h  job_create_screen.c  job_create_screen.h  job_create_screen_draw.c  job_setup_screen.c  job_setup_screen.h  job_setup_screen_draw.c  main_menu_screen.c  main_menu_screen.h  main_menu_screen_draw.c  measure_points_screen.c  measure_points_screen.h  measure_points_screen_draw.c  new_project_screen.c  new_project_screen.h  new_project_screen_draw.c  open_job_screen.c  open_job_screen.h  open_job_screen_draw.c  placeholder_screen.c  placeholder_screen.h  placeholder_screen_draw.c  project_context.c  project_context.h  sleep_screen.c  sleep_screen.h  sleep_screen_draw.c
src/ui/tft/: display.c  display.h  screen.c  screen.h  touch.c  touch.h
src/util/: config.c  config.h  log.c  log.h  thread.c  thread.h  units.h
systemd/: geomark-base.service  geomark-rover.service
tests/: CMakeLists.txt  debug_nmea.py  test_breaklines.c  test_codelist.c  test_collector.c  test_collector.py  test_config.c  test_coords.c  test_geomark.py  test_job_metadata.c  test_keyboard.c  test_measure_points.c  test_measure_points_export.c  test_nmea.c  test_nmea.py  test_rtcm3.c  test_screens.c  test_units.c  test_usb_export.c  test_widget.c
